Produção - Modificado o application.properties para deploys

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=api
 
 spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=${DB_SQL_USER}
+spring.datasource.password=${DB_SQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
@@ -10,4 +10,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace=never
 
-api.security.token.senha=${JWT_SENHA:$2a$10$Y50UaMFOxteibQEYLrwuHeehHYfcoafCopUazP12.rqB41bsolF5.}
+api.security.token.senha=${JWT_SENHA:123456}
